Mudar tempo e texto

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <p>Todas as vezes eram verdades, e vou lhe destacar os pontos que eu amo na sua aparencia (Alerta, alto indicie de romantismo e esforço de alguém que não sabe se expressar):</p>
                 <ul>
                     <li><strong class="letra-vermelha">O seu sorriso.</strong> Eu não sei o que acontece, eu sempre me apaixono toda vez que você sorri daquele jeito. Quando eu faço algo que você ama, a minima coisa, e você abre seus dentes perfeitos e eu penso comigo mesmo <strong class="text-muted">"Cara, ela é demais!"</strong>. Eu amo esse momento, e eu fiz, faço e sempre farei de tudo pra te ver sorrindo desse jeito.</li>
-                    <li><strong class="letra-vermelha">Os seus olhos.</strong> Você sabe que eu não gosto de verde, mas sério, os seus olhos são os mais lindos que EU JÁ VI. Eu me perco toda vez que você me olha, eu vejo nele o céu mais lindo, um lugar que eu queria ficar por toda a minha vida. Toda vez que você chora, esse céu fecha, e eu não gosto disso, ele é meu lar, espero olhar pra ele por todo o sempre</li>
+                    <li><strong class="letra-vermelha">Os seus olhos.</strong> Você sabe que eu não gosto de verde, mas sério, os seus olhos são os mais lindos que EU JÁ VI. Sempre que eu te olho eu lembro de RUBI:<strong class="letra-vermelha"> "Seu olho é tão cristalino, tipo água do mar, hipnotiza com o verde, do beck, do olhar. </strong>Eu me perco toda vez que você me olha, é meu ponto fraco, eu vejo nele o céu mais lindo, um lugar que eu queria ficar por toda a minha vida. Toda vez que você chora, esse céu fecha, e eu não gosto disso, ele é meu lar, espero olhar pra ele por todo o sempre</li>
                     <li><strong class="letra-vermelha">O seu corpo.</strong> Em todo o nosso namoro, eu ainda desconfio que você é uma deusa grega expulsa do olimpo por ser mais linda que Afrodite. Ou sei lá, um anjo que caiu do céu por ser desastrado <strong class="text-muted">(O que é a sua cara)</strong>. Eu ainda não acredito que eu te namoro, não caiu minha ficha, você é perfeita.</li>
                     <li><strong class="letra-vermelha">Os seus supostos "defeitos".</strong> Você as vezes fala do que você não gosta em você, mas eu amo de paixão. Sua dermatite, que eu ainda acho não é problema de pele, e sim o problema de ser o amor da minha vida. Os seus pés, que são literalmente pés de princesa, e todas as outras coisas, não são defeitos, são o que fazem ser você, a mulher da minha vida</li>
                 </ul>
@@ -295,7 +295,7 @@
         </div>
 
         <div id="tela16" class="invisivel temporizado letra2 tela-centro" fundo="fundo6" style="color: #FFF;" tempo="1500" >
-            <div tempo="10000" class="text-center">
+            <div class="text-center">
                 <p class="mb-0">Obrigado por estar comigo.</p>
                 <img src="imagens/final.jpg" class="custom" width="150" alt="">
                 <p>❤️minha PRINCESA❤️</p>
