--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
 
         <div id="tela16" class="invisivel temporizado letra2 tela-centro" fundo="fundo6" style="color: #FFF;" tempo="1500" >
-            <div class="text-center">
+            <div tempo="300000" class="text-center">
                 <p class="mb-0">Obrigado por estar comigo.</p>
                 <img src="imagens/final.jpg" class="custom" width="150" alt="">
                 <p>❤️minha PRINCESA❤️</p>
