Alteração na gramática

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div id="tela12" class="tela">
             <h2 class="letra-vermelha">Mas então eu rezei</h2>
             <p>No outro dia eu faltei de manha, e junto de um amigo meu entramos em oração, o mesmo terço que minha vó rezou a 4 anos atrás quando eu estava mal</p>
-            <p>O nome do terço é <strong class="letra-vermelha">Maria Passa na Frente,</strong> e eu naquela hora, saiba, a Mamãe do céu cuidou de você</p>
+            <p>O nome do terço é <strong class="letra-vermelha">Maria Passa na Frente,</strong> e eu naquela hora, sabia, a Mamãe do céu cuidou de você</p>
             <hr>
             <p>Mesmo assim, sua cirurgia demorou, e mesmo tendo acabado, você não voltava, a morfina tinha dado efeito, eu sabia o quão mal você tava, eu já tinha entregado tudo aos céus. Mas foi no ônibus que eu recebi a noticia que você tinha voltado ao quarto, e que estava tudo bem</p>
             <hr>
